syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

import "wallet/gold.dto.proto";
import "wallet/token.dto.proto";
import "wallet/balance.dto.proto";
import "level.dto.proto";

service UserService {
    // Get the user's balance
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse);

    // Gold-related operations
    rpc GetGoldBalance (GetGoldBalanceRequest) returns (GetGoldBalanceResponse);
    rpc AddGold (AddGoldRequest) returns (google.protobuf.Empty);
    rpc SubtractGold (SubtractGoldRequest) returns (google.protobuf.Empty);

    // Token-related operations
    rpc GetTokenBalance (GetTokenBalanceRequest) returns (GetTokenBalanceResponse);
    rpc AddToken (AddTokenRequest) returns (AddTokenResponse);
    rpc SubtractToken (SubtractTokenRequest) returns (google.protobuf.Empty);

    // Level-related operations
    rpc GetLevel(GetLevelRequest) returns (GetLevelResponse);
    rpc AddExperiences(AddExperiencesRequest) returns (google.protobuf.Empty);
}


